tests/testcases/valid/local_static/02_multiple_local_statics.ciel
// Test multiple local static variables in same function

int test_multiple() {
    static int a = 10;
    static int b = 20;
    static int c = 30;

    a = a + 1;
    b = b + 2;
    c = c + 3;

    return a + b + c;
}

int main() {
    int first = test_multiple();   // Should be 10+1 + 20+2 + 30+3 = 66
    int second = test_multiple();  // Should be 11+1 + 22+2 + 33+3 = 72

    // Check if second call returned expected value
    if (second == 72) {
        return 0;
    } else {
        return 1;
    }
}
